--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
     "expo": "~36.0.0",
+    "expo-constants": "^8.0.0",
+    "expo-file-system": "^8.0.0",
+    "expo-secure-store": "~8.0.0",
+    "expo-sqlite": "^8.0.0",
+    "firebase": "^7.11.0",
     "native-base": "^2.13.8",
-    "react": "~16.9.0",
+    "react": "^16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-check-box": "^2.1.7",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
