--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "base-64": "^0.1.0",
     "expo": "~36.0.0",
     "expo-constants": "^8.0.0",
     "expo-file-system": "^8.0.0",
@@ -21,6 +22,7 @@
     "react": "^16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-base64": "0.0.2",
     "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
@@ -30,8 +32,11 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.2.2"
+    "react-navigation": "^4.3.1",
+    "react-navigation-stack": "^2.2.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
