--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
     "base-64": "^0.1.0",
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
     "expo-constants": "^8.0.0",
     "expo-file-system": "^8.0.0",
     "expo-secure-store": "~8.0.0",
@@ -22,6 +23,7 @@
     "react": "^16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-app-intro-slider": "^3.0.0",
     "react-native-base64": "0.0.2",
     "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^0.2.0",
